# apm

./: .clang-format  .envrc.example  .gitignore  .zenodo.json  CMakeLists.txt  README.md  flake.nix  meson.build
.github/workflows/: ubuntu-22.04.yml
apps/: apm.cpp
bench/: apm-benchmark.cpp  apm_benchmark.cpp
cmake/: apm-config.cmake.in
include/: iapm.hpp  utils.hpp
include/apm/: apm.hpp  theoretical_model.hpp  utils.hpp
notebooks/: .gitignore  apm_bench.org
src/: main.cpp
tests/apm/: apm.cpp
